--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-    <title>Youdao Dictionary</title> 
+    <title>Shanbay Dictionary</title> 
     <link rel="stylesheet" type="text/css" href="src/css/style.css">
 </head>
 <body>
@@ -31,6 +31,7 @@
       <input type="checkbox" name="linkQuery" id="linkQuery"><label for="linkQuery">使用 shift 辅助链接划词</label>
       <a href="#" title="如果想对某个链接上的单词进行划词，为避免无法取词的问题，可以按住shift键，此时链接会变成可取词的状态，这样就可以轻松划词查词啦:)" class="link-query help">(鼠标悬停查看说明)</a>
     </div>
+    <!--
     <div class="top-menu">
       <label for="useCtrl" class="sub-title">使用
       <select id="open-api">
@@ -40,6 +41,7 @@
       </select>
       接口</label>
     </div>
+    -->
     <div class="top-menu">
       <input type="checkbox" name="useHttps" id="useHttps"><label for="useHttps">开启 HTTPS 接口</label>
       <a href="#" title="如果出现无法查词的问题，建议关闭此选项" class="link-query help">(说明)</a>
