Modify logo and links

--- a/popup.html
+++ b/popup.html
@@ -89,7 +89,7 @@
   </div>
   <footer>
     <div class="setting-button link" id="setting-button" title="设置"></div>
-    Powered By <span id="powered-by"><img src="http://www.youdao.com/help/fanyiapi/brand/002.gif" alt="有道翻译"></span>
+    Powered By Shanbay
     <div class="contact-info">
       <span id="issue" class="link" title="在Github上提出问题或建议"></span>
       <span id="source" class="link" title="源码在这里，欢迎Fork"></span>
